--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": ""
   },
   "scripts": {
+    "start-local-server": "NODE_PATH=\"./master/src\" node ./babel.server",
     "publish": "gulp",
     "start": "gulp serve",
     "test": "mocha --compilers js:babel-core/register --require .master/test/test_helper.js --recursive .master/test",
@@ -19,9 +20,6 @@
     "axios": "^0.13.1",
     "classnames": "^2.2.3",
     "history": "^2.0.0-rc2",
-    "koa": "^1.2.2",
-    "koa-proxy": "^0.6.0",
-    "koa-static": "^2.0.0",
     "lodash": "^4.15.0",
     "pubsub-js": "^1.5.3",
     "react": "^0.14.6",
@@ -38,10 +36,8 @@
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
-    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "browser-sync": "^2.11.0",
