add hapi server, not yet working

--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "url": ""
   },
   "scripts": {
-    "start-local-server": "NODE_PATH=\"./master/src\" node ./babel.server",
+    "build-server": "webpack --colors --display-error-details --config webpack.server.prod.js",
+    "build-client": "gulp build",
+    "build": "concurrently \"npm run build-server\" \"npm run build-client\"",
     "publish": "gulp",
-    "start": "gulp serve",
+    "start": "forever --minUptime 1000 --spinSleepTime 1000 -c \"node --harmony\" ./dist/server.js",
     "test": "mocha --compilers js:babel-core/register --require .master/test/test_helper.js --recursive .master/test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "watch-server": "webpack --watch --verbose --colors --display-error-details --config webpack.server.dev.js",
+    "watch-server-start": "node node_modules/just-wait --pattern \"dist/*.js\" && npm run start",
+    "watch-client": "gulp default",
+    "dev": "concurrently --kill-others \"npm run watch-server-start\" \"npm run watch-server\" \"npm run watch-client\"",
+    "postinstall": "npm run build"
   },
   "homepage": "decentral.detour.com",
   "dependencies": {
     "axios": "^0.13.1",
+    "babel-polyfill": "^6.13.0",
     "classnames": "^2.2.3",
+    "concurrently": "^2.2.0",
+    "file-loader": "^0.8.5",
+    "forever": "^0.15.2",
+    "h2o2": "^5.1.1",
+    "hapi": "^15.0.3",
     "history": "^2.0.0-rc2",
+    "inert": "^4.0.2",
     "lodash": "^4.15.0",
+    "piping": "^1.0.0-rc.3",
     "pubsub-js": "^1.5.3",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.7",
@@ -31,9 +46,12 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0-rc5",
     "react-router-bootstrap": "^0.20.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-form": "^5.3.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.2",
+    "webpack-node-externals": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -70,18 +88,22 @@
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.1",
+    "http-proxy": "^1.14.0",
     "imports-loader": "^0.6.5",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.2",
     "marked": "^0.3.2",
     "mocha": "^3.0.2",
     "modernizr-webpack-plugin": "^1.0.5",
+    "proxy-middleware": "^0.15.0",
     "react-addons-test-utils": "^0.14.8",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
+    "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
+    "webpack-dev-server": "^1.15.1",
     "webpack-hot-middleware": "^2.7.1",
     "webpack-stream": "^3.1.0",
     "yargs": "^3.7.2"
