--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "hapi": "^15.0.3",
     "history": "^2.0.0-rc2",
     "inert": "^4.0.2",
+    "just-wait": "^1.0.5",
     "lodash": "^4.15.0",
     "piping": "^1.0.0-rc.3",
     "pubsub-js": "^1.5.3",
+    "radium": "^0.18.1",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.7",
     "react-bootstrap": "^0.28.2",
