--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
   },
   "homepage": "decentral.detour.com",
   "dependencies": {
-    "axios": "^0.13.1",
     "babel-polyfill": "^6.13.0",
     "classnames": "^2.2.3",
     "concurrently": "^2.2.0",
     "file-loader": "^0.8.5",
     "forever": "^0.15.2",
+    "form-data": "^1.0.1",
     "h2o2": "^5.1.1",
     "hapi": "^15.0.3",
     "history": "^2.0.0-rc2",
     "inert": "^4.0.2",
+    "isomorphic-fetch": "^2.2.1",
     "just-wait": "^1.0.5",
     "lodash": "^4.15.0",
     "piping": "^1.0.0-rc.3",
@@ -53,7 +54,8 @@
     "redux-form": "^5.3.3",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.2",
-    "webpack-node-externals": "^1.3.3"
+    "webpack-node-externals": "^1.3.3",
+    "wreck": "^9.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
