--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "homepage": "decentral.detour.com",
   "dependencies": {
     "babel-polyfill": "^6.13.0",
+    "babel-preset-stage-2": "^6.13.0",
     "classnames": "^2.2.3",
     "concurrently": "^2.2.0",
     "file-loader": "^0.8.5",
     "forever": "^0.15.2",
-    "form-data": "^1.0.1",
     "h2o2": "^5.1.1",
     "hapi": "^15.0.3",
     "history": "^2.0.0-rc2",
